--- a/dependencies/styles/layout.css
+++ b/dependencies/styles/layout.css
@@ -27,15 +27,6 @@ html[xmlns] .clear{display:block;}
 
 a{outline:none; text-decoration:none;}
 
-code{font-weight:normal; font-style:normal; font-family:Georgia, "Times New Roman", Times, serif;}
-
-.fl_left{float:left;}
-.fl_right{float:right;}
-
-img{margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;}
-.imgholder, .imgl, .imgr{padding:4px; border:1px solid #D6D6D6; text-align:center;}
-.imgl{float:left; margin:0 15px 15px 0; clear:left;}
-.imgr{float:right; margin:0 0 15px 15px; clear:right;}
 
 /*----------------------------------------------HTML 5 Overrides-------------------------------------*/
 
@@ -56,6 +47,7 @@ padding-right : 30px;
 .row1, .row1 a{color:#979797; background-color:#FFFFFF;}
 .row2{color:#979797; background-color:#FFFFFF;}
 .row2 a{color:#FF9900; background-color:#FFFFFF;}
+.row3 {width: 90%; background-color:#FFFFFF; margin : auto; margin-top:0px;}
 
 /*----------------------------------------------Generalise-------------------------------------*/
 
@@ -86,6 +78,5 @@ h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:16px; font-weight:bold; fo
 
 #container{padding:30px 0;}
 #container section{display:block; width:100%; margin:0 0 30px 0; padding:0;}
-#container .last{margin:0;}
-#container .more{text-align:right;}
+}
 
